--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -109,13 +109,14 @@ jobs:
           
       - name: Configure inventory with connection variables
         run: |
-             echo "[win:vars]
+            cd /etc/ansible
+            echo "[win:vars]
                     ansible_user=${{ secrets.WIN_USER }}
                     ansible_password=${{ secrets.WIN_PASSWORD }}
                     ansible_connection=winrm
-                    ansible_winrm_server_cert_validation= ignore
+                    ansible_winrm_server_cert_validation=ignore
                     ansible_winrm_transport=ntlm
-                    ansible_winrm_port=5986" >> /etc/ansible/inventory.ini
+                    ansible_winrm_port=5986" >> inventory.ini
            
       - name: Check connectivity
         run: |
