--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -99,25 +99,26 @@ jobs:
            ansible all --list-hosts
            
       #Copy the hostgeneration script to the control node under /etc/ansible
-      - name: Generate host file for dynamic inventory
+      - name: Generate host file for dynamic inventory and add connection params
         run: |
           cd /etc/ansible
           sudo chmod +x inventory.sh
           sudo sh inventory.sh
           #Print inventory
           cat inventory.ini
-          
-      - name: Configure inventory with connection variables
-        run: |
-            cd /etc/ansible
+          if grep -q "win" /etc/ansible/inventory.ini;then
+            echo "Dynamic inventory defined"
             echo "[win:vars]
-                    ansible_user=${{ secrets.WIN_USER }}
-                    ansible_password=${{ secrets.WIN_PASSWORD }}
-                    ansible_connection=winrm
-                    ansible_winrm_server_cert_validation=ignore
-                    ansible_winrm_transport=ntlm
-                    ansible_winrm_port=5986" >> inventory.ini
-           
+                  ansible_user=${{ secrets.WIN_USER }}
+                  ansible_password=${{ secrets.WIN_PASSWORD }}
+                  ansible_connection=winrm
+                  ansible_winrm_server_cert_validation=ignore
+                  ansible_winrm_transport=ntlm
+                  ansible_winrm_port=5986" >> inventory.ini
+          else
+            echo "No hosts found"
+          fi
+                    
       - name: Check connectivity
         run: |
            ansible -i /etc/ansible/inventory.ini -m win_ping win
