--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -107,13 +107,13 @@ jobs:
           #Print inventory
           cat inventory.ini
           if grep -q "win" /etc/ansible/inventory.ini;then
-            echo '[win:vars]
+            echo "[win:vars]
                   ansible_user=${{ secrets.WIN_USER }}
                   ansible_password=${{ secrets.WIN_PASSWORD }}
                   ansible_connection=winrm
                   ansible_winrm_server_cert_validation=ignore
                   ansible_winrm_transport=ntlm
-                  ansible_winrm_port=5986' > inventory.ini
+                  ansible_winrm_port=5986" > inventory.ini
             #Print inventory
             cat /etc/ansible/inventory.ini
           else
