--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -108,12 +108,12 @@ jobs:
           cat inventory.ini
           if grep -q "win" /etc/ansible/inventory.ini;then
             echo "[win:vars]" >> inventory.ini
-            echo "ansible_user=${{ secrets.WIN_USER }}" >> inventory.ini
+            echo  "ansible_user=${{ secrets.WIN_USER }}" >> inventory.ini
             echo  "ansible_password=${{ secrets.WIN_PASSWORD }}" >> inventory.ini
             echo  "ansible_connection=winrm" >> inventory.ini
             echo  "ansible_winrm_server_cert_validation=ignore" >> inventory.ini
             echo  "ansible_winrm_transport=ntlm" >> inventory.ini
-            echo   "ansible_winrm_port=5986" > inventory.ini
+            echo  "ansible_winrm_port=5986" >> inventory.ini
             #Print inventory
             cat /etc/ansible/inventory.ini
           else
