--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -43,6 +43,8 @@ jobs:
             echo "Ansible is already installed"
           fi
           
+     
+          
       - name: Install Python
         run: |
           if ! command -v python3 &> /dev/null; then
@@ -50,6 +52,7 @@ jobs:
             sudo apt-get install -y python3
           fi
           python3 --version
+          
           
       - name: Install Python Pip,Boto3 and other dependencies
         run: |
@@ -97,13 +100,15 @@ jobs:
       - name: Check the dynamic inventory 
         run: |
            ansible all --list-hosts
+
            
       #Copy the hostgeneration script to the control node under /etc/ansible
       - name: Generate host file for dynamic inventory and add connection params
         run: |
           cd /etc/ansible
-          sudo chmod +x inventory.sh
-          sudo sh inventory.sh
+          sudo cp /home/ubuntu/scripts/host.sh .
+          sudo chmod +x host.sh
+          sudo sh host.sh
           #Print inventory
           cat inventory.ini
           if grep -q "win" /etc/ansible/inventory.ini;then
