--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -27,6 +27,9 @@ jobs:
         with:
           ssh-private-key: |
             ${{ secrets.SSH_PRIVATE_KEY }}
+            
+      - name: Transfer script to instance
+        run: scp -i ${{ secrets.SSH_PRIVATE_KEY }} host.sh ubuntu@${{ vars.INSTANCE_IP }}:/home/ubuntu
 
       - name: Add Repo Ansible
         run: |
@@ -102,7 +105,7 @@ jobs:
       #Copy the hostgeneration script to the control node under /etc/ansible
       - name: Generate host file for dynamic inventory and add connection params
         run: |
-          sudo cp /home/ubuntu/scripts/host.sh /etc/ansible
+          sudo cp /home/ubuntu/host.sh /etc/ansible
           cd /etc/ansible
           sudo chmod +x host.sh
           sudo sh host.sh
