--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -29,7 +29,7 @@ jobs:
             ${{ secrets.SSH_PRIVATE_KEY }}
             
       - name: Transfer script to instance
-        run: scp -i ${{ secrets.SSH_PRIVATE_KEY }} host.sh ubuntu@${{ vars.INSTANCE_IP }}:/home/ubuntu
+        run: scp -i host.sh ubuntu@${{ vars.INSTANCE_IP }}:/home/ubuntu
 
       - name: Add Repo Ansible
         run: |
