--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -17,18 +17,22 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
         
-      - name: Configure SSH
-        env:
-          PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Configure SSH key
         run: |
-         mkdir -p ~/.ssh/
-          echo "$PRIVATE_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-         ssh-keyscan -H {{ vars.INSTANCE_IP }} >> ~/.ssh/known_hosts
-         
+           mkdir -p ~/.ssh/
+           echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+           chmod 600 ~/.ssh/id_rsa
+           ssh-keyscan -H {{ vars.INSTANCE_IP }} >> ~/.ssh/known_hosts
+           
+      - name: Set up SSH agent
+        uses: webfactory/ssh-agent@v0.5.1
+        with:
+          ssh-private-key: |
+            ${{ secrets.SSH_PRIVATE_KEY }}       
+                
       - name: Copy Script
         run: |
-          ssh username@ubuntu_instance_ip 'mkdir -p /home/ubuntu/scripts'
+          ssh ubuntu@{{ vars.INSTANCE_IP }}: 'mkdir -p /home/ubuntu/scripts'
           scp -r host.sh ubuntu@{{ vars.INSTANCE_IP }}://home/ubuntu/scripts
 
       - name: Add Repo Ansible
