--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Copy Script
         run: |
           eval "$(ssh-agent -s)"
+          ssh-add ${{ secrets.SSH_PRIVATE_KEY }} 
           ssh -i ubuntu@${{ vars.INSTANCE_IP }}: 'mkdir -p /home/ubuntu/scripts'
           scp -r host.sh ubuntu@${{ vars.INSTANCE_IP }}://home/ubuntu/scripts
 
