--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -25,7 +25,7 @@ jobs:
          mkdir -p ~/.ssh/
          echo "$PRIVATE_KEY" > ~/.ssh/id_rsa
          chmod 600 ~/.ssh/id_rsa
-         ssh-keyscan -H $INSTANCE_IP >> ~/.ssh/known_hosts
+         ssh-keyscan -H -t $INSTANCE_IP >> ~/.ssh/known_hosts
      
       - name: Copy File
         run: |
