--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -24,8 +24,7 @@ jobs:
         run: |
          mkdir -p ~/.ssh/
          echo "$PRIVATE_KEY" > ~/.ssh/id_rsa
-         chmod 600 ~/.ssh/id_rsa
-         ssh-keyscan -H -t $INSTANCE_IP >> ~/.ssh/known_hosts
+         chmod 600 ~/.ssh/id_rsa >> ~/.ssh/known_hosts
      
       - name: Copy File
         run: |
