--- a/.github/workflows/mynew.yml
+++ b/.github/workflows/mynew.yml
@@ -26,7 +26,7 @@ jobs:
         uses: webfactory/ssh-agent@v0.5.1
         with:
           ssh-private-key: |
-            ${{ secrets.SSH_PRIVATE_KEY }
+            ${{ secrets.SSH_PRIVATE_KEY }}
      
       - name: Add Repo Ansible
         run: |
