--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -67,17 +67,16 @@ jobs:
            else
                 echo "Dynamic inventory needs to be setup"
                 echo "::set-output name=file_exists::false"
-                echo "---
-                plugin: aws_ec2
-                regions:
-                    - "us-east-2"
-                keyed_groups:
-                     - key: tags.Name
-                filters:
-                    instance-state-name : running
-                    tag:type: mywinnode
-                compose:
-                    ansible_host: public_ip_address" | sudo tee -a aws_ec2.yaml
+                echo "plugin: aws_ec2
+                      regions:
+                        - "us-east-2"
+                      keyed_groups:
+                        - key: tags.Name
+                      filters:
+                        instance-state-name : running
+                        tag:type: mywinnode
+                      compose:
+                        ansible_host: public_ip_address" | sudo tee -a aws_ec2.yaml
              fi
                 
       - name: Check Ansible Configuration and set it accordingly
