--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -67,6 +67,7 @@ jobs:
            else
                 echo "Dynamic inventory needs to be setup"
                 echo "::set-output name=file_exists::false"
+                sudo touch aws_ec2.yaml
                 echo "plugin: aws_ec2" >> aws_ec2.yaml
                 echo "regions:" >> aws_ec2.yaml
                 echo    "- "us-east-2"" >> aws_ec2.yanl
@@ -77,7 +78,6 @@ jobs:
                 echo     "tag:type: mywinnode" >> aws_ec2.yaml
                 echo "compose:" >> aws_ec2.yaml
                 echo     "ansible_host: public_ip_address" >> aws_ec2.yaml
-                sudo chmod +x aws_ec2.yaml
              fi
                 
       - name: Check Ansible Configuration and set it accordingly
