--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -67,16 +67,17 @@ jobs:
            else
                 echo "Dynamic inventory needs to be setup"
                 echo "::set-output name=file_exists::false"
-                echo "plugin: aws_ec2" >> sudo tee -a aws_ec2.yaml
-                echo "regions:" >> sudo tee -a aws_ec2.yaml
-                echo    "- "us-east-2"" >> sudo tee -a aws_ec2.yaml
-                echo "keyed_groups:" >> sudo tee -a aws_ec2.yaml
-                echo    "- key: tags.Name" >> sudo tee -a aws_ec2.yaml
-                echo "filters:" >> sudo tee -a aws_ec2.yaml
-                echo     "instance-state-name : running" >> sudo tee -a aws_ec2.yaml
-                echo     "tag:type: mywinnode" >> sudo tee -a aws_ec2.yaml
-                echo "compose:" >> sudo tee -a aws_ec2.yaml
-                echo     "ansible_host: public_ip_address" >> sudo tee -a aws_ec2.yaml
+             echo "---
+                plugin: aws_ec2
+                regions:
+                    - "us-east-2"
+                keyed_groups:
+                     - key: tags.Name
+                filters:
+                    instance-state-name : running
+                    tag:type: mywinnode
+                compose:
+                    ansible_host: public_ip_address" | sudo tee -a aws_ec2.yaml
              fi
                 
       - name: Check Ansible Configuration and set it accordingly
