--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -89,9 +89,9 @@ jobs:
           else
             echo "Dynamic inventory not defined in ansible configuration"
             echo "::set-output name=string_found::false"
-            echo "[defaults]
-                   enable_plugins = aws_ec2
-                   inventory = /opt/ansible/inventory/aws_ec2.yaml" | sudo tee -a /etc/ansible/ansible.cfg
+            echo "[defaults]" >> sudo tee -a /etc/ansible/ansible.cfg
+            echo "enable_plugins = aws_ec2" >> sudo tee -a /etc/ansible/ansible.cfg
+            echo "inventory = /opt/ansible/inventory/aws_ec2.yaml" >> sudo tee -a /etc/ansible/ansible.cfg
            cat /etc/ansible/ansible.cfg
           fi
            
