--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -74,7 +74,7 @@ jobs:
                      - key: tags.Name
                 filters:
                     instance-state-name : running
-                    tag:type: mywinnode
+                    tag:type: mywin
                 compose:
                     ansible_host: public_ip_address" | sudo tee -a aws_ec2.yaml
              fi
