--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -108,12 +108,12 @@ jobs:
           sudo sh host.sh
           if [ -s "inventory.ini" ]; then
             sudo chmod 777 inventory.ini
-            echo '[win:vars]'>> inventory.ini
-            echo  'ansible_user=${{ secrets.WIN_USER }}' >> inventory.ini
-            echo  'ansible_password=${{ secrets.WIN_PASSWORD }}'>> inventory.ini
-            echo  'ansible_connection=winrm' >> inventory.ini
-            echo  'ansible_winrm_server_cert_validation=ignore' >> inventory.ini
-            echo  'ansible_winrm_port=5986' >> inventory.ini
+            echo "[win:vars]" >> inventory.ini
+            echo "ansible_user=${{ secrets.WIN_USER }}" >> inventory.ini
+            echo "ansible_password=${{ secrets.WIN_PASSWORD }}">> inventory.ini
+            echo "ansible_connection=winrm" >> inventory.ini
+            echo "ansible_winrm_server_cert_validation=ignore" >> inventory.ini
+            echo "ansible_winrm_port=5986" >> inventory.ini
             #Print inventory
             cat /etc/ansible/inventory.ini
           else
