--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -108,14 +108,20 @@ jobs:
           sudo sh host.sh
           if [ -s "inventory.ini" ]; then
             sudo chmod 777 inventory.ini
+             if grep -q "$STRING_TO_CHECK" "$FILE_PATH"; then
+               echo "String found in the file"
+            #Print inventory
+            cat /etc/ansible/inventory.ini
+            else
+            echo "Connection string not found in the file hence appending required variables"
             echo "[win:vars]" >> inventory.ini
             echo "ansible_user=${{ secrets.WIN_USER }}" >> inventory.ini
             echo "ansible_password=${{ secrets.WIN_PASSWORD }}">> inventory.ini
             echo "ansible_connection=winrm" >> inventory.ini
             echo "ansible_winrm_server_cert_validation=ignore" >> inventory.ini
             echo "ansible_winrm_port=5986" >> inventory.ini
-            #Print inventory
             cat /etc/ansible/inventory.ini
+             fi
           else
             echo "No hosts found"
           fi
