--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -108,8 +108,8 @@ jobs:
           sudo sh host.sh
           if [ -s "inventory.ini" ]; then
             sudo chmod 777 inventory.ini
-             if grep -q "$STRING_TO_CHECK" "$FILE_PATH"; then
-               echo "String found in the file"
+             if grep -q "vars" "inventory.ini"; then
+               echo "Variable String found in the file"
             #Print inventory
             cat /etc/ansible/inventory.ini
             else
