--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -126,4 +126,4 @@ jobs:
       - name: Run Ansible playbook
         run: |
            ansible -i /etc/ansible/inventory.ini -m win_ping win
-           ansible-playbook -i /etc/ansible/inventory.ini win
+           ansible-playbook -i /etc/ansible/inventory.ini windowsplaybook.yaml
