--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -129,5 +129,9 @@ jobs:
            ansible-playbook -i /etc/ansible/inventory.ini windowsplaybook.yaml
       - name: Clean up inventory for next associated runs
         run: |
+          if [ -f "inventory.ini" ]; then
           sudo rm /etc/ansible/inventory.ini
            echo "Inventory file removed"
+          else
+           echo "Inventory file not found/No hosts generated"
+          fi
