--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -75,6 +75,7 @@ jobs:
                 filters:
                     instance-state-name : running
                     tag:type: mywin
+                    tag:type: mywin1
                 compose:
                     ansible_host: public_ip_address" | sudo tee -a aws_ec2.yaml
              fi
