--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -72,9 +72,10 @@ jobs:
                     - "us-east-2"
                 keyed_groups:
                      - key: tags.Name
+                     - key: tags.type
+                       separator: ''
                 filters:
                     instance-state-name : running
-                    tag:type: mywin,mywin1
                 compose:
                     ansible_host: public_ip_address" | sudo tee -a aws_ec2.yaml
              fi
