--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -71,6 +71,7 @@ jobs:
                 regions:
                     - "us-east-2"
                 keyed_groups:
+                     - key: tags.Name
                      - key: tags.type
                 filters:
                     instance-state-name : running
@@ -96,7 +97,7 @@ jobs:
            
       - name: Check the dynamic inventory 
         run: |
-           ansible all --list-hosts      
+           ansible type --list-hosts      
    
       #Copy the hostgeneration script to the control node under /etc/ansible
       - name: Generate host file for dynamic inventory and add connection params
