--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -72,11 +72,11 @@ jobs:
                     - "us-east-2"
                 keyed_groups:
                      - key: tags.Name
-                     - key: tags.type
                 filters:
                     instance-state-name : running
                     tag:type:
                        - 'mywin'
+                    tag:platform:
                        - 'mywin1'
                 compose:
                     ansible_host: public_ip_address" | sudo tee -a aws_ec2.yaml
