--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -76,7 +76,10 @@ jobs:
                     instance-state-name : running
                     tag:type:
                        - 'mywin'
-                       - 'mywin1'
+                    tag:Name:
+                       - 'mywindows2'
+                    tag:platform:
+                        - 'mywin2'
                 compose:
                     ansible_host: public_ip_address" | sudo tee -a aws_ec2.yaml
              fi
