--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -110,13 +110,17 @@ jobs:
           sudo sh host.sh
           if [ -s "inventory.ini" ]; then
             sudo chmod 777 inventory.ini
-            echo "[win:vars]" >> inventory.ini
-            echo "ansible_user=${{ secrets.WIN_USER }}" >> inventory.ini
-            echo "ansible_password=${{ secrets.WIN_PASSWORD }}">> inventory.ini
-            echo "ansible_connection=winrm" >> inventory.ini
-            echo "ansible_winrm_server_cert_validation=ignore" >> inventory.ini
-            echo "ansible_winrm_port=5986" >> inventory.ini
-            cat /etc/ansible/inventory.ini
+            mkdir /etc/ansible/group_vars
+            sudo chmod -R 777 /etc/ansible/
+            cd /etc/ansible/group_vars
+            echo "---" >> win.yaml
+            echo "ansible_user:${{ secrets.WIN_USER }}" >> win.yaml
+            echo "ansible_password:${{ secrets.WIN_PASSWORD }}">> win.yaml
+            echo "ansible_connection:winrm" >> win.yaml
+            echo "ansible_winrm_server_cert_validation:ignore" >> win.yaml
+            echo "ansible_winrm_port:5986" >> win.yaml
+            sudo chmod 777 win.yaml
+            cat /etc/ansible/inventory.ini       
           else
             echo "No hosts found"
           fi
