--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -110,6 +110,10 @@ jobs:
           sudo sh host.sh
           if [ -s "inventory.ini" ]; then
             sudo chmod 777 inventory.ini
+            if [ -d "/etc/ansible/group_vars" ]; then
+               echo "Group Vars Directory exists."
+           else
+            echo "Groupvars Directory does not exist."
             sudo mkdir /etc/ansible/group_vars
             sudo chmod -R 777 /etc/ansible/
             cd /etc/ansible/group_vars
@@ -122,6 +126,7 @@ jobs:
             sudo chmod 777 win.yaml
             cat /etc/ansible/inventory.ini
             sudo cp /etc/ansible/inventory.ini /etc/ansible/hosts
+            fi
           else
             echo "No hosts found"
           fi
