--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -1,4 +1,4 @@
-name: New Ansible Play Updated Windows test 2 windows tag testing
+name: New Ansible Play Updated Windows test 2 windows tag testing win.yaml
 
 on:
   push:
