--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -133,7 +133,7 @@ jobs:
                     
       - name: Check connectivity
         run: |
-           ansible win -m win_ping win
+           ansible win -m win_ping
            
       - name: Run Ansible playbook
         run: |
