--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -118,11 +118,12 @@ jobs:
             sudo chmod -R 777 /etc/ansible/
             cd /etc/ansible/group_vars
             echo "---" >> win.yaml
-            echo "ansible_user:${{ secrets.WIN_USER }}" >> win.yaml
-            echo "ansible_password:${{ secrets.WIN_PASSWORD }}">> win.yaml
-            echo "ansible_connection:winrm" >> win.yaml
-            echo "ansible_winrm_server_cert_validation:ignore" >> win.yaml
-            echo "ansible_winrm_port:5986" >> win.yaml
+            echo "ansible_user: ${{ secrets.WIN_USER }}" >> win.yaml
+            echo "ansible_password: ${{ secrets.WIN_PASSWORD }}">> win.yaml
+            echo "ansible_connection: winrm" >> win.yaml
+            echo "ansible_winrm_server_cert_validation: ignore" >> win.yaml
+            echo "ansible_winrm_port: 5986" >> win.yaml
+            echo  "ansible_winrm_transport: basic" >> win.yaml
             sudo chmod 777 win.yaml
             cat /etc/ansible/inventory.ini
             sudo cp /etc/ansible/inventory.ini /etc/ansible/hosts
