--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -126,7 +126,6 @@ jobs:
             echo  "ansible_winrm_transport: basic" >> win.yaml
             sudo chmod 777 win.yaml
             cat /etc/ansible/inventory.ini
-            sudo cp /etc/ansible/inventory.ini /etc/ansible/hosts
             fi
           else
             echo "No hosts found"
@@ -138,8 +137,8 @@ jobs:
            
       - name: Run Ansible playbook
         run: |
-           ansible -i /etc/ansible/hosts win -m win_ping
-           ansible-playbook -i /etc/ansible/hosts windowsplaybook.yaml
+           ansible -i /etc/ansible/inventory.ini win -m win_ping
+           ansible-playbook -i /etc/ansible/inventory.ini windowsplaybook.yaml
       - name: Clean up inventory for next associated runs
         run: |
           cd /etc/ansible 
