--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -1,5 +1,4 @@
-name: New Ansible Play Updated Windows test 2 windows tag testing win.yaml 0
-
+name: New Ansible Play Updated Windows test for privateip
 on:
   push:
     branches:
