--- a/.github/workflows/mynewwrkflow.yml
+++ b/.github/workflows/mynewwrkflow.yml
@@ -1,4 +1,4 @@
-name: New Ansible Play Updated Windows test for privateip
+name: New Ansible Play Updated Windows test for privateip test1
 on:
   push:
     branches:
